<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_login"
            app:titleTextColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:theme="@style/Theme.AppCompat.NoActionBar"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSenhaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_senha"
                    android:text="@string/senha"
                    android:textColor="@color/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="23pt"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="23pt"
            android:layout_marginRight="15dp"
            android:background="@color/colorBtnLogin"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginRight="12pt"
            android:layout_marginLeft="12pt">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_or"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="#47525E"
                android:layout_marginLeft="10dp"
                />


            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/line_or" />


        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="23pt"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="66pt"
            android:layout_marginRight="15dp"
            android:background="@color/colorBtnRegister"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>




    </LinearLayout>

</FrameLayout>